# spsim

./: .gitignore  README.md  benchmark_solver_schemes.py  documentation.tex  new_simulate_charge_stability.py  pyproject.toml  requirements.txt  simulate_1d_dot.py  simulate_2d_dot.py  simulate_charge_stability.py  simulate_charge_stability_package.py  simulate_charge_stability_spsim.py  simulate_coulomb_diamonds.py  simulate_pinchoff.py
docs/: documentation.aux  documentation.out  documentation.tex  documentation.toc
figures/stability_results/: stability_data_P1_P2.npz
quantum_dot_sim/: __init__.py  constants.py
quantum_dot_sim/measurement_helpers/: __init__.py
quantum_dot_sim/simulation_runtime/: sc_solver.py
quantum_dot_sim/solvers/: __init__.py  poisson.py
scripts/: benchmark_solver_schemes.py  simulate_1d_dot.py  simulate_2d_dot.py  simulate_charge_stability.py  simulate_charge_stability_package.py  simulate_charge_stability_spsim.py  simulate_pinchoff.py
src/: pyproject.toml
src/spsim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/spsim/device/: __init__.py  potential.py
src/spsim/measurement_helpers/: __init__.py  sweep_utils.py
src/spsim/simulation_runtime/: __init__.py  charge_density.py  sc_solver.py
src/spsim/solvers/: schrodinger.py
