[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spsim"
version = "0.1.0"
description = "A package for simulating quantum dot devices."
authors = [
    { name = "Daniel Schug" }
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "hilbertcurve"
]

[project.optional-dependencies]
dev = ["pytest"]

# [project.scripts]
# quantum_dot_sim = "spsim.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["spsim*"]  # ["*"] by default
exclude = []  # empty by default
namespaces = false  # true by default
